// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product renders correctly 1`] = `
.c11 {
  margin-bottom: 8px !important;
  color: #3f51b5 !important;
}

.c12 {
  background-color: #4caf50 !important;
  color: #fff !important;
  width: 100% !important;
  box-shadow: none !important;
}

.c12:hover {
  color: #fff !important;
}

.c10 {
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  border-top: 1px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c10:first-child {
  border-top: 0;
  border-left: 0;
}

.c8 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.5rem;
  color: #eceff1;
}

.c8:last-child {
  margin-right: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  line-height: 1;
  margin: 8px 0;
}

.c1 {
  background-color: #fff;
  padding: 16px;
  border-bottom: 1px solid #eceff1;
}

.c5 {
  margin-left: 0.25rem;
  color: #ffb74d;
}

.c2 {
  margin-bottom: 8px;
}

.c3 {
  max-width: 100%;
  max-height: 100%;
  margin: auto;
}

.c4 {
  color: inherit;
}

.c0 {
  margin-bottom: 56px;
}

.c9 {
  background-color: #fff;
}

@media (min-width:36em) {
  .c10 {
    -webkit-flex: 0 0 20%;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}

@media (min-width:36em) {
  .c10 {
    margin: 8px 0;
    padding: 8px 16px;
    border-top: 0;
    border-left: 1px solid #eceff1;
  }
}

@media (min-width:62em) {
  .c7 {
    margin: 0;
  }
}

@media (min-width:62em) {
  .c1 {
    background-color: transparent;
    padding: 0;
    border-bottom: 0;
  }
}

@media (min-width:62em) {
  .c2 {
    background-color: white;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4px;
    margin-right: 16px;
    margin-left: 12px;
    border: 1px solid #eceff1;
    margin-bottom: -8px;
    text-align: center;
    height: 85px;
  }
}

@media (min-width:62em) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:62em) {
  .c9 {
    border: 1px solid #eceff1;
  }
}

<div
  class="c0"
>
  <div
    class="MuiGrid-root c1 MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 MuiGrid-grid-md-2"
    >
      <div
        class="c2"
      >
        <img
          alt="Landbay"
          class="c3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJcAAAA0CAMAAACwyVoLAAAAY1BMVEX///8xMDEIBQj29vYODA4iISIlJCUrKiuMjIweHR5gX2Dg4OBwb3AuLS7r6+ugn6AYFhjFxcW4uLhLSkuHhodDQkNaWVrT09M6OTqYmJhramvLy8uwsLBQT1CoqKja2tp4d3h9F85kAAADsklEQVRYhe2Z3XakIAyAYRQQEUTrODo66vs/5SaAPzNt99TORb0w7ekiJvCZhIRzltBjCvlrgG/k5Nonniu+HEfilSsmR5J45Yr+mmUj0cm1S06ufXIYrqKa+g3AUbjueihTao7GldRkVCRvjsZllZFNQZrb0bgiQ9OSZOXRuJRhV/VTf6k6Tet+O1PUaT2EMb4c59m0hhxJndxbP9vPz/mSziOYJ4SYezZlldshg1EL+ZUSZcxwXTb6P5cVwubbmZoLfg16Ugheu1GJeiRjwguztYLZ3IZnKYtgPoEKA8o72F6QNgGdCzopo0N/1+qHXJJStuVSDPRs2IXj2DmvBD1JMrHcmwQDl+VsftTWe8xoDQuCyc3Cv+Am0mgqHt7n1TT8tH594kqQRdxXLup2XLm0lJLB5qKJHBc+62WRXqI5cqSCaghaYdfPfJZdXBHVqHgxK5eDxM93XPrDKNU3AMgq5NK1Uh36JHMWV2duu2DRkbuY3fUWF/oF0Hi7clHMnQ0XvjBCgxYZGBWp9w13SX6LnbmYYPzASdxclq+77ueCxViOSy9cgAIRe+FyEbQdcOlH1/W4tDv/oMBb8JmNXAR103IXzXe5xhgpPnT4RuASE8eIvXIpTOt+cPll4a9InBvBgJlM+CXhGzXEW/avm+7nqjimU8tC5sM2doQgxWp84cLLOcuH9Tz2wYvgHcgF56PSujfsa6w9XJg24KkRk0J5LtkZC5l7k19wDc5fnHPwSoz5BRGE2mCYz0nygYdADq977uca4IlHrubwJHCVJJeUT/SZa5zjqK9t20LEwLG+JsD31MIfzx6x6Xe9bwcXrk/bpH3AaeMLF06LF67WhXg+j6gIq0BNoALMU6xnWGmA05/T97huLiEgLs7/5cKFQXzm6mBGN0udIAyLu7lszN2iyJX8mktMXVEUcM4n9IpGwfpQL1ykYivXtSv6DAu+bF2eP4qiTPHYFa4rzea6eZuLQtuVcUqiiy9X7gc2GhcuIjTd9CGG/PyDLH0Ip6lpsDshGf665vMmV+g2uIvsDUrB3IoLF2b0U9/WEu8cm7596Qs8NK0zv3Hfvt7girkXmZKGcaaDBoWxIJLz2DeRycIQLi9B2fIcFfNgzSwvSYra4RpTwxhOZgw3oN/lvakSL9WAw2quzT0+KJy/LXoVGbx224dLZxGs8y4iEY5bsr6ooGnDlfC78nWUe/QnObn2ycm1T06ufXJy7ZOTa59suf6a5UlWrqP+P8wB5eTaJ0fl+gciqEC9vx+3xQAAAABJRU5ErkJggg=="
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-7"
    >
      <div
        class="MuiGrid-root MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <p
                class="MuiTypography-root c4 MuiTypography-h5"
              >
                Landbay
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root c5"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67zM11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <p
            class="MuiTypography-root c4 MuiTypography-body1"
          >
            Landbay - Buy To Let Wizards
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root c6 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
          >
            broker only
          </span>
        </div>
        <div
          class="c8"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
          >
            consumer favourite
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root c9 MuiGrid-container"
  >
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
      >
        Max LTV
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextPrimary"
      >
        85%
      </h5>
    </div>
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
      >
        Initial Rate
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextPrimary"
      >
        1.49%
      </h5>
    </div>
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
      >
        Subsequent Rate
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextPrimary"
      >
        2.75%
      </h5>
    </div>
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
      >
        Fees
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextPrimary"
      >
        £1,495
      </h5>
    </div>
    <div
      class="c10"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-content-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover c11 MuiLink-button MuiTypography-colorPrimary"
          >
            more details
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiFab-root c12 MuiFab-extended MuiFab-primary MuiFab-sizeMedium"
            href="https://b2bfinance.com/enquire/buy-to-let"
            rel="noopener"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <span
              class="MuiFab-label"
            >
              Get Deal
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wrapper render correctly without fade 1`] = `
.c0 {
  margin-bottom: 56px;
}

<div
  class="c0"
/>
`;

exports[`Wrapper renders correctly with fade 1`] = `
.c0 {
  margin-bottom: 56px;
  opacity: 0.6;
}

<div
  class="c0"
/>
`;
